# ETL_DUCKDB

./: pipeline.py  pipeline_00.py  pyproject.toml
pasta_gdown/: tabela_2021_em_diante.csv
